# detection_fianl

./: README.md
vision_max/: CMakeLists.txt  package.xml
vision_max/config/: camera_info.yaml
vision_max/launch/: launch.py
vision_max/src/: camera_node.cpp  detection_node.cpp  predictor_node.cpp
